@@ -33,12 +33,12 @@ import java.io.IOException;
 import java.math.BigInteger;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -48,12 +48,14 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.concurrent.Callable;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -64,29 +66,41 @@ import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
 import org.apache.accumulo.core.client.MutationsRejectedException;
 import org.apache.accumulo.core.client.Scanner;
+import org.apache.accumulo.core.client.ScannerBase;
 import org.apache.accumulo.core.client.TableNotFoundException;
+import org.apache.accumulo.core.client.admin.CompactionConfig;
 import org.apache.accumulo.core.client.admin.NewTableConfiguration;
+import org.apache.accumulo.core.client.admin.TabletAvailability;
+import org.apache.accumulo.core.client.admin.TabletInformation;
 import org.apache.accumulo.core.client.admin.TimeType;
+import org.apache.accumulo.core.clientImpl.ClientContext;
+import org.apache.accumulo.core.clientImpl.thrift.ThriftTableOperationException;
 import org.apache.accumulo.core.conf.AccumuloConfiguration;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.LoadPlan;
 import org.apache.accumulo.core.data.LoadPlan.RangeType;
 import org.apache.accumulo.core.data.Mutation;
+import org.apache.accumulo.core.data.Range;
+import org.apache.accumulo.core.data.RowRange;
 import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.data.constraints.Constraint;
+import org.apache.accumulo.core.dataImpl.KeyExtent;
 import org.apache.accumulo.core.file.FileOperations;
 import org.apache.accumulo.core.file.FileSKVWriter;
 import org.apache.accumulo.core.file.rfile.RFile;
-import org.apache.accumulo.core.metadata.MetadataTable;
 import org.apache.accumulo.core.metadata.StoredTabletFile;
+import org.apache.accumulo.core.metadata.SystemTables;
+import org.apache.accumulo.core.metadata.UnreferencedTabletFile;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema;
+import org.apache.accumulo.core.metadata.schema.MetadataTime;
 import org.apache.accumulo.core.metadata.schema.TabletMetadata;
 import org.apache.accumulo.core.metadata.schema.TabletsMetadata;
 import org.apache.accumulo.core.security.Authorizations;
 import org.apache.accumulo.core.security.TablePermission;
 import org.apache.accumulo.core.spi.crypto.NoCryptoServiceFactory;
+import org.apache.accumulo.core.util.UtilWaitThread;
 import org.apache.accumulo.harness.MiniClusterConfigurationCallback;
 import org.apache.accumulo.harness.SharedMiniClusterBase;
 import org.apache.accumulo.minicluster.MemoryUnit;
@@ -112,13 +126,11 @@ import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.google.common.collect.MoreCollectors;
+import com.google.common.util.concurrent.MoreExecutors;
+
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
-/**
- * Tests new bulk import technique. For the old technique see {@link BulkOldIT}
- *
- * @since 2.0.0
- */
 public class BulkNewIT extends SharedMiniClusterBase {
 
   private static final Logger LOG = LoggerFactory.getLogger(BulkNewIT.class);
@@ -172,6 +184,13 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   private void testSingleTabletSingleFile(AccumuloClient c, boolean offline, boolean setTime)
       throws Exception {
+    testSingleTabletSingleFile(c, offline, setTime, () -> {
+      return null;
+    });
+  }
+
+  private void testSingleTabletSingleFile(AccumuloClient c, boolean offline, boolean setTime,
+      Callable<Void> preLoadAction) throws Exception {
     addSplits(c, tableName, "0333");
 
     if (offline) {
@@ -182,6 +201,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
     String h1 = writeData(fs, dir + "/f1.", aconf, 0, 332);
 
+    preLoadAction.call();
     c.tableOperations().importDirectory(dir).to(tableName).tableTime(setTime).load();
     // running again with ignoreEmptyDir set to true will not throw an exception
     c.tableOperations().importDirectory(dir).to(tableName).tableTime(setTime).ignoreEmptyDir(true)
@@ -296,13 +316,93 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   @Test
   public void testSetTime() throws Exception {
-    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+    try (var client = (ClientContext) Accumulo.newClient().from(getClientProps()).build()) {
       tableName = "testSetTime_table1";
       NewTableConfiguration newTableConf = new NewTableConfiguration();
       // set logical time type so we can set time on bulk import
       newTableConf.setTimeType(TimeType.LOGICAL);
       client.tableOperations().create(tableName, newTableConf);
-      testSingleTabletSingleFile(client, false, true);
+
+      var tablet =
+          client.getAmple().readTablet(new KeyExtent(client.getTableId(tableName), null, null));
+      assertEquals(new MetadataTime(0, TimeType.LOGICAL), tablet.getTime());
+
+      var extent = new KeyExtent(client.getTableId(tableName), new Text("0333"), null);
+
+      testSingleTabletSingleFile(client, false, true, () -> {
+        // Want to test with and without a location, assuming the tablet does not have a location
+        // now. Need to validate that assumption.
+        assertNull(client.getAmple().readTablet(extent).getLocation());
+        return null;
+      });
+
+      assertEquals(new MetadataTime(1, TimeType.LOGICAL),
+          client.getAmple().readTablet(extent).getTime());
+
+      int added = 0;
+      try (var writer = client.createBatchWriter(tableName);
+          var scanner = client.createScanner(tableName)) {
+        for (var entry : scanner) {
+          Mutation m = new Mutation(entry.getKey().getRow());
+          m.at().family(entry.getKey().getColumnFamily())
+              .qualifier(entry.getKey().getColumnFamily())
+              .visibility(entry.getKey().getColumnVisibility())
+              .put(Integer.parseInt(entry.getValue().toString()) * 10 + "");
+          writer.addMutation(m);
+          added++;
+        }
+      }
+
+      // Writes to a tablet should not change time unless it flushes, so time in metadata table
+      // should be the same
+      assertEquals(new MetadataTime(1, TimeType.LOGICAL),
+          client.getAmple().readTablet(extent).getTime());
+
+      // verify data written by batch writer overwrote bulk imported data
+      try (var scanner = client.createScanner(tableName)) {
+        assertEquals(2,
+            scanner.stream().mapToLong(e -> e.getKey().getTimestamp()).min().orElse(-1));
+        assertEquals(2 + added - 1,
+            scanner.stream().mapToLong(e -> e.getKey().getTimestamp()).max().orElse(-1));
+        scanner.forEach((k, v) -> {
+          assertEquals(Integer.parseInt(k.getRow().toString()) * 10,
+              Integer.parseInt(v.toString()));
+        });
+      }
+
+      String dir = getDir("/testSetTime-");
+      writeData(fs, dir + "/f1.", aconf, 0, 332);
+
+      // For this import tablet should be hosted so the bulk import operation will have to
+      // coordinate getting time with the hosted tablet. The time should reflect the batch writes
+      // just done.
+      client.tableOperations().importDirectory(dir).to(tableName).tableTime(true).load();
+
+      // verify bulk imported data overwrote batch written data
+      try (var scanner = client.createScanner(tableName)) {
+        assertEquals(2 + added,
+            scanner.stream().mapToLong(e -> e.getKey().getTimestamp()).min().orElse(-1));
+        assertEquals(2 + added,
+            scanner.stream().mapToLong(e -> e.getKey().getTimestamp()).max().orElse(-1));
+        scanner.forEach((k, v) -> {
+          assertEquals(Integer.parseInt(k.getRow().toString()), Integer.parseInt(v.toString()));
+        });
+      }
+
+      // the bulk import should update the time in the metadata table
+      assertEquals(new MetadataTime(2 + added, TimeType.LOGICAL),
+          client.getAmple().readTablet(extent).getTime());
+
+      client.tableOperations().flush(tableName, null, null, true);
+
+      // the flush should not change the time in the metadata table
+      assertEquals(new MetadataTime(2 + added, TimeType.LOGICAL),
+          client.getAmple().readTablet(extent).getTime());
+
+      try (var scanner = client.createScanner("accumulo.metadata")) {
+        scanner.forEach((k, v) -> System.out.println(k + " " + v));
+      }
+
     }
   }
 
@@ -336,6 +436,198 @@ public class BulkNewIT extends SharedMiniClusterBase {
       c = assertThrows(AccumuloException.class, () -> testBulkFileMax(true));
       msg = c.getMessage();
       assertTrue(msg.contains("bad-file.rf"), "Bad File not in exception: " + msg);
+    }
+  }
+
+  @Test
+  public void testPause() throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      tableName = "testPause_table1";
+      NewTableConfiguration newTableConf = new NewTableConfiguration();
+      var props =
+          Map.of(Property.TABLE_FILE_PAUSE.getKey(), "5", Property.TABLE_MAJC_RATIO.getKey(), "20");
+      newTableConf.setProperties(props);
+      client.tableOperations().create(tableName, newTableConf);
+
+      addSplits(client, tableName, "0060 0120");
+      String dir = getDir("/testPause1-");
+
+      for (int i = 0; i < 18; i++) {
+        writeData(fs, dir + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+
+      client.tableOperations().importDirectory(dir).to(tableName).tableTime(true).load();
+      verifyData(client, tableName, 0, 179, false);
+
+      String dir2 = getDir("/testPause2-");
+
+      for (int i = 0; i < 18; i++) {
+        writeData(fs, dir2 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1, 1000);
+      }
+
+      // Start a second bulk import in background thread because it is expected this bulk import
+      // will hang because tablets are over the pause file limit.
+      ExecutorService executor = Executors.newFixedThreadPool(1);
+      var future = executor.submit(() -> {
+        client.tableOperations().importDirectory(dir2).to(tableName).tableTime(true).load();
+        return null;
+      });
+
+      // sleep a bit to give the bulk import a chance to run
+      UtilWaitThread.sleep(3000);
+      // bulk import should not have gone through it should be pausing because the tablet have too
+      // many files
+      assertFalse(future.isDone());
+      verifyData(client, tableName, 0, 179, false);
+
+      // Before the bulk import runs no tablets should have loaded flags set
+      assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+      // compacting the first tablet should allow the import on that tablet to proceed
+      client.tableOperations().compact(tableName,
+          new CompactionConfig().setWait(true).setEndRow(new Text("0060")));
+      // Wait for the first tablets data to be updated by bulk import.
+      Wait.waitFor(
+          () -> Map.of("0060", 7, "0120", 0, "null", 0).equals(countLoaded(client, tableName)));
+
+      // The bulk imports on the other tablets should not have gone through, verify their data was
+      // not updated. Spot check a few rows in the other two tablets. The first tablet may or may
+      // not be updated on the tablet server at this point, so can not look at its data.
+      assertEquals(61L, readRowValue(client, tableName, 61));
+      assertEquals(100L, readRowValue(client, tableName, 100));
+      assertEquals(140L, readRowValue(client, tableName, 140));
+
+      // compact the entire table, should allow all bulk imports to go through
+      client.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
+      // wait for bulk import to complete
+      future.get();
+      // verify the values were updated by the bulk import that was paused
+      verifyData(client, tableName, 0, 179, 1000, false);
+      assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+    }
+  }
+
+  @Test
+  public void testMaxTabletsPerFile() throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      tableName = "testMaxTabletsPerFile_table1";
+      NewTableConfiguration newTableConf = new NewTableConfiguration();
+      var props = Map.of(Property.TABLE_BULK_MAX_TABLET_FILES.getKey(), "5");
+      newTableConf.setProperties(props);
+      client.tableOperations().create(tableName, newTableConf);
+
+      var tableId = ((ClientContext) client).getTableId(tableName);
+
+      String dir = getDir("/testBulkFileMFP-");
+
+      for (int i = 4; i < 8; i++) {
+        writeData(fs, dir + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+
+      // should be able to bulk import 4 files w/o issue
+      client.tableOperations().importDirectory(dir).to(tableName).load();
+
+      verifyData(client, tableName, 40, 79, false);
+
+      var dir2 = getDir("/testBulkFileMFP2-");
+      for (int i = 12; i < 18; i++) {
+        writeData(fs, dir2 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+
+      var exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir2).to(tableName).load());
+      var msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 6
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 6"), msg);
+      // error should include range information
+      assertTrue(msg.contains(tableId + "<<"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+
+      // ensure no data was added to table
+      verifyData(client, tableName, 40, 79, false);
+
+      // tested a table w/ single tablet, now test a table w/ three tablets and try importing into
+      // the first, middle, and last tablet
+      addSplits(client, tableName, "0100 0200");
+
+      // try the first tablet
+      var dir3 = getDir("/testBulkFileMFP3-");
+      for (int i = 0; i < 7; i++) {
+        writeData(fs, dir3 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      // add single file for the last tablet, this does not exceed the limit however it should not
+      // go through
+      writeData(fs, dir3 + "/f_last.", aconf, 300, 400);
+      exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir3).to(tableName).load());
+      // verify no files were moved by the failed bulk import
+      assertEquals(8, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir3), f -> f.getName().endsWith(".rf")))
+          .count());
+      msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 7
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 7"), msg);
+      assertTrue(msg.contains(tableId + ";0100<"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+      verifyData(client, tableName, 40, 79, false);
+
+      // try the middle tablet
+      var dir4 = getDir("/testBulkFileMFP4-");
+      for (int i = 11; i < 17; i++) {
+        writeData(fs, dir4 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      // add single file for the last tablet, this does not exceed the limit however it should not
+      // go through
+      writeData(fs, dir4 + "/f_last.", aconf, 300, 400);
+      exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir4).to(tableName).load());
+      // verify no files were moved by the failed bulk import
+      assertEquals(7, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir4), f -> f.getName().endsWith(".rf")))
+          .count());
+      msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 6
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 6"), msg);
+      assertTrue(msg.contains(tableId + ";0200;0100"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+      verifyData(client, tableName, 40, 79, false);
+
+      // try the last tablet
+      var dir5 = getDir("/testBulkFileMFP5-");
+      for (int i = 21; i < 28; i++) {
+        writeData(fs, dir5 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      // add single file for the first tablet, this does not exceed the limit however it should not
+      // go through
+      writeData(fs, dir5 + "/f_last.", aconf, 0, 10);
+      exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir5).to(tableName).load());
+      // verify no files were moved by the failed bulk import
+      assertEquals(8, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir5), f -> f.getName().endsWith(".rf")))
+          .count());
+      msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 7
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 7"), msg);
+      assertTrue(msg.contains(tableId + "<;0200"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+      verifyData(client, tableName, 40, 79, false);
+
+      // test an import that has more files than the limit, but not in a single tablet so it should
+      // work
+      var dir6 = getDir("/testBulkFileMFP6-");
+      for (int i = 8; i < 14; i++) {
+        writeData(fs, dir6 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      client.tableOperations().importDirectory(dir6).to(tableName).load();
+      // verify the bulk import moved the files
+      assertEquals(0, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir6), f -> f.getName().endsWith(".rf")))
+          .count());
+      verifyData(client, tableName, 40, 139, false);
     }
   }
 
@@ -679,39 +971,314 @@ public class BulkNewIT extends SharedMiniClusterBase {
   }
 
   @Test
+  public void testManyFiles() throws Exception {
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      String dir = getDir("/testBulkFile-");
+      FileSystem fs = getCluster().getFileSystem();
+      fs.mkdirs(new Path(dir));
+
+      addSplits(c, tableName, "5000");
+
+      for (int i = 0; i < 100; i++) {
+        writeData(fs, dir + "/f" + i + ".", aconf, i * 100, (i + 1) * 100 - 1);
+      }
+
+      c.tableOperations().importDirectory(dir).to(tableName).load();
+
+      verifyData(c, tableName, 0, 100 * 100 - 1, false);
+
+      c.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
+
+      verifyData(c, tableName, 0, 100 * 100 - 1, false);
+    }
+  }
+
+  @Test
+  public void testConcurrentCompactions() throws Exception {
+    // run test with bulk imports happening in parallel
+    testConcurrentCompactions(true);
+    // run the test with bulk imports happening serially
+    testConcurrentCompactions(false);
+  }
+
+  private void testConcurrentCompactions(boolean parallelBulkImports) throws Exception {
+    // Tests compactions running concurrently with bulk import to ensure that data is not bulk
+    // imported twice. Doing a large number of bulk imports should naturally cause compactions to
+    // happen. This test ensures that compactions running concurrently with bulk import does not
+    // cause duplicate imports of a files. For example if a files is imported into a tablet and then
+    // compacted away then the file should not be imported again by the FATE operation doing the
+    // bulk import. The test is structured in such a way that duplicate imports would be detected.
+
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      c.tableOperations().delete(tableName);
+      // Create table without versioning iterator. This done to detect the same file being imported
+      // more than once.
+      c.tableOperations().create(tableName, new NewTableConfiguration().withoutDefaults());
+
+      addSplits(c, tableName, "0999 1999 2999 3999 4999 5999 6999 7999 8999");
+
+      String dir = getDir("/testBulkFile-");
+
+      final int N = 100;
+
+      ExecutorService executor;
+      CountDownLatch startLatch;
+      if (parallelBulkImports) {
+        final int numThreads = 16;
+        executor = Executors.newFixedThreadPool(numThreads);
+        startLatch = new CountDownLatch(numThreads); // wait for a portion of the tasks to be ready
+        assertTrue(N >= startLatch.getCount(),
+            "Not enough tasks/threads to satisfy latch count - deadlock risk");
+      } else {
+        startLatch = null;
+        // execute the bulk imports in the current thread which will cause them to run serially
+        executor = MoreExecutors.newDirectExecutorService();
+      }
+
+      // Do N bulk imports of the exact same data.
+      var futures = IntStream.range(0, N).mapToObj(i -> executor.submit(() -> {
+        try {
+          String iterationDir = dir + "/iteration" + i;
+          // Create 10 files for the bulk import.
+          for (int f = 0; f < 10; f++) {
+            writeData(fs, iterationDir + "/f" + f + ".", aconf, f * 1000, (f + 1) * 1000 - 1);
+          }
+          if (parallelBulkImports) {
+            startLatch.countDown();
+            startLatch.await();
+          }
+          c.tableOperations().importDirectory(iterationDir).to(tableName).tableTime(true).load();
+          getCluster().getFileSystem().delete(new Path(iterationDir), true);
+        } catch (Exception e) {
+          throw new IllegalStateException(e);
+        }
+      })).collect(Collectors.toList());
+      assertEquals(N, futures.size());
+
+      // wait for all bulk imports and check for errors in background threads
+      for (var future : futures) {
+        future.get();
+      }
+
+      executor.shutdown();
+
+      try (var scanner = c.createScanner(tableName)) {
+        // Count the number of times each row is seen.
+        Map<String,Long> rowCounts = scanner.stream().map(e -> e.getKey().getRowData().toString())
+            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+        var expectedRows = IntStream.range(0, 10000).mapToObj(i -> String.format("%04d", i))
+            .collect(Collectors.toSet());
+        assertEquals(expectedRows, rowCounts.keySet());
+        // Each row should be duplicated once for each bulk import. If a file were imported twice,
+        // then would see a higher count.
+        assertTrue(rowCounts.values().stream().allMatch(l -> l == N));
+      }
+
+      // Its expected that compactions ran while the bulk imports were running. If no compactions
+      // ran, then each tablet would have N files. Verify each tablet has less than N files.
+      try (var scanner = c.createScanner("accumulo.metadata")) {
+        scanner.setRange(MetadataSchema.TabletsSection
+            .getRange(getCluster().getServerContext().getTableId(tableName)));
+        scanner.fetchColumnFamily(MetadataSchema.TabletsSection.DataFileColumnFamily.NAME);
+        // Get the count of files for each tablet.
+        Map<String,Long> rowCounts = scanner.stream().map(e -> e.getKey().getRowData().toString())
+            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+        assertTrue(rowCounts.values().stream().allMatch(l -> l < N));
+        // expect to see 10 tablets
+        assertEquals(10, rowCounts.size());
+      }
+    }
+  }
+
+  @Test
   public void testExceptionInMetadataUpdate() throws Exception {
     try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
 
-      // after setting this up, bulk imports should never succeed on a tablet server
+      // after setting this up, bulk imports should fail
       setupBulkConstraint(getPrincipal(), c);
 
       String dir = getDir("/testExceptionInMetadataUpdate-");
 
-      String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
+      writeData(fs, dir + "/f1.", aconf, 0, 333);
 
-      var executor = Executors.newSingleThreadExecutor();
-      // With the constraint configured that makes tservers throw an exception on bulk import, the
-      // bulk import should never succeed. So run the bulk import in another thread.
-      var future = executor.submit(() -> {
-        c.tableOperations().importDirectory(dir).to(tableName).load();
-        return null;
-      });
+      // operation should fail with the constraint on the table
+      assertThrows(AccumuloException.class,
+          () -> c.tableOperations().importDirectory(dir).to(tableName).load());
 
-      Thread.sleep(10000);
-
-      // the bulk import should not be done
-      assertFalse(future.isDone());
-
-      // remove the constraint which should allow the bulk import running in the background thread
-      // to complete
       removeBulkConstraint(getPrincipal(), c);
 
-      // wait for the future to complete and ensure it had no exceptions
-      future.get();
+      // should succeed after removing the constraint
+      String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
+      c.tableOperations().importDirectory(dir).to(tableName).load();
 
       // verifty the data was bulk imported
       verifyData(c, tableName, 0, 333, false);
       verifyMetadata(c, tableName, Map.of("null", Set.of(h1)));
+    }
+  }
+
+  /*
+   * Test bulk importing to tablets with different availability settings. For hosted tablets bulk
+   * import should refresh them.
+   */
+  @Test
+  public void testAvailability() throws Exception {
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      String dir = getDir("/testBulkFile-");
+      FileSystem fs = getCluster().getFileSystem();
+      fs.mkdirs(new Path(dir));
+
+      addSplits(c, tableName, "0100 0200 0300 0400 0500");
+
+      c.tableOperations().setTabletAvailability(tableName, RowRange.openClosed("0100", "0200"),
+          TabletAvailability.HOSTED);
+      c.tableOperations().setTabletAvailability(tableName, RowRange.openClosed("0300", "0400"),
+          TabletAvailability.HOSTED);
+      c.tableOperations().setTabletAvailability(tableName, RowRange.greaterThan("0400"),
+          TabletAvailability.UNHOSTED);
+
+      // verify tablet availabilities are as expected
+      var expectedAvailabilites =
+          Map.of("0100", TabletAvailability.ONDEMAND, "0200", TabletAvailability.HOSTED, "0300",
+              TabletAvailability.ONDEMAND, "0400", TabletAvailability.HOSTED, "0500",
+              TabletAvailability.UNHOSTED, "NULL", TabletAvailability.UNHOSTED);
+      assertEquals(expectedAvailabilites, getTabletAvailabilities(c, tableName));
+
+      var expectedHosting = expectedAvailabilites.entrySet().stream()
+          .collect(Collectors.toMap(Entry::getKey, e -> e.getValue() == TabletAvailability.HOSTED));
+
+      // Wait for the tablets w/ a TabletAvailability of HOSTED to have a location. Waiting for this
+      // ensures when the bulk import runs that some tablets will be hosted and others will not.
+      Wait.waitFor(() -> getLocationStatus(c, tableName).equals(expectedHosting));
+
+      // create files that straddle tables w/ different Availability settings
+      writeData(fs, dir + "/f1.", aconf, 0, 150);
+      writeData(fs, dir + "/f2.", aconf, 151, 250);
+      writeData(fs, dir + "/f3.", aconf, 251, 350);
+      writeData(fs, dir + "/f4.", aconf, 351, 450);
+      writeData(fs, dir + "/f5.", aconf, 451, 550);
+
+      c.tableOperations().importDirectory(dir).to(tableName).load();
+
+      // Verify bulk import operation did not change anything w.r.t. tablet hosting, should not
+      // cause ondemand tablets to be hosted.
+      assertEquals(expectedAvailabilites, getTabletAvailabilities(c, tableName));
+      assertEquals(expectedHosting, getLocationStatus(c, tableName));
+
+      // after import data should be visible
+      try (var scanner = c.createScanner(tableName)) {
+        var expected = IntStream.range(0, 401).mapToObj(i -> String.format("%04d", i))
+            .collect(Collectors.toSet());
+        // scan up to the unhosted tablet
+        scanner.setRange(new Range("0000", true, "0400", true));
+        var seen = scanner.stream().map(e -> e.getKey().getRowData().toString())
+            .collect(Collectors.toSet());
+        assertEquals(expected, seen);
+      }
+
+      try (var scanner = c.createScanner(tableName)) {
+        var expected = IntStream.range(0, 551).mapToObj(i -> String.format("%04d", i))
+            .collect(Collectors.toSet());
+        // with eventual scan should see data imported into unhosted tablets
+        scanner.setConsistencyLevel(ScannerBase.ConsistencyLevel.EVENTUAL);
+        var seen = scanner.stream().map(e -> e.getKey().getRowData().toString())
+            .collect(Collectors.toSet());
+        assertEquals(expected, seen);
+      }
+    }
+  }
+
+  @Test
+  public void testManyTabletAndFiles() throws Exception {
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      String dir = getDir("/testBulkFile-");
+      FileSystem fs = getCluster().getFileSystem();
+      fs.mkdirs(new Path(dir));
+
+      TreeSet<Text> splits = IntStream.range(1, 9000).mapToObj(BulkNewIT::row).map(Text::new)
+          .collect(Collectors.toCollection(TreeSet::new));
+      c.tableOperations().addSplits(tableName, splits);
+
+      final int numTasks = 16;
+      var executor = Executors.newFixedThreadPool(numTasks);
+      var futures = new ArrayList<Future<?>>();
+      // wait for a portion of the tasks to be ready
+      CountDownLatch startLatch = new CountDownLatch(numTasks);
+      assertTrue(numTasks >= startLatch.getCount(),
+          "Not enough tasks/threads to satisfy latch count - deadlock risk");
+
+      var loadPlanBuilder = LoadPlan.builder();
+      var rowsExpected = new HashSet<>();
+      var imports = IntStream.range(2, 8999).boxed().collect(Collectors.toList());
+      // The order in which imports are added to the load plan should not matter so test that.
+      Collections.shuffle(imports);
+      for (var data : imports) {
+        String filename = "f" + data + ".";
+        loadPlanBuilder.loadFileTo(filename + RFile.EXTENSION, RangeType.TABLE, row(data - 1),
+            row(data));
+        var future = executor.submit(() -> {
+          startLatch.countDown();
+          startLatch.await();
+          writeData(fs, dir + "/" + filename, aconf, data, data);
+          return null;
+        });
+        futures.add(future);
+        rowsExpected.add(row(data));
+      }
+      assertEquals(imports.size(), futures.size());
+
+      for (var future : futures) {
+        future.get();
+      }
+
+      executor.shutdown();
+
+      var loadPlan = loadPlanBuilder.build();
+
+      c.tableOperations().importDirectory(dir).to(tableName).plan(loadPlan).load();
+
+      // using a batch scanner can read from lots of tablets w/ less RPCs
+      try (var scanner = c.createBatchScanner(tableName)) {
+        // use a scan server so that tablets do not need to be hosted
+        scanner.setConsistencyLevel(ScannerBase.ConsistencyLevel.EVENTUAL);
+        scanner.setRanges(List.of(new Range()));
+        var rowsSeen = scanner.stream().map(e -> e.getKey().getRowData().toString())
+            .collect(Collectors.toSet());
+        assertEquals(rowsExpected, rowsSeen);
+      }
+    }
+  }
+
+  /**
+   * @return Map w/ keys that are end rows of tablets and the value is a true when the tablet has a
+   *         current location.
+   */
+  private static Map<String,Boolean> getLocationStatus(AccumuloClient c, String tableName)
+      throws Exception {
+    ClientContext ctx = (ClientContext) c;
+    var tableId = ctx.getTableId(tableName);
+    try (var tablets = ctx.getAmple().readTablets().forTable(tableId).build()) {
+      return tablets.stream().collect(Collectors.toMap(tm -> {
+        var er = tm.getExtent().endRow();
+        return er == null ? "NULL" : er.toString();
+      }, tm -> {
+        var loc = tm.getLocation();
+        return loc != null && loc.getType() == TabletMetadata.LocationType.CURRENT;
+      }));
+    }
+  }
+
+  /**
+   * @return Map w/ keys that are end rows of tablets and the value is the tablets availability.
+   */
+  private static Map<String,TabletAvailability> getTabletAvailabilities(AccumuloClient c,
+      String tableName) throws TableNotFoundException {
+    try (var tabletsInfo =
+        c.tableOperations().getTabletInformation(tableName, List.of(RowRange.all()))) {
+      return tabletsInfo.collect(Collectors.toMap(ti -> {
+        var er = ti.getTabletId().getEndRow();
+        return er == null ? "NULL" : er.toString();
+      }, TabletInformation::getTabletAvailability));
     }
   }
 
@@ -731,7 +1298,9 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       // faster to create a table w/ lots of splits
       c.tableOperations().delete(tableName);
-      c.tableOperations().create(tableName, new NewTableConfiguration().withSplits(splits));
+      var props = Map.of(Property.TABLE_BULK_MAX_TABLETS.getKey(), "500");
+      c.tableOperations().create(tableName, new NewTableConfiguration().withSplits(splits)
+          .withInitialTabletAvailability(TabletAvailability.HOSTED).setProperties(props));
 
       var lpBuilder = LoadPlan.builder();
       lpBuilder.loadFileTo("f1.rf", RangeType.TABLE, null, row(1));
@@ -765,8 +1334,32 @@ public class BulkNewIT extends SharedMiniClusterBase {
     client.tableOperations().addSplits(tableName, splits);
   }
 
+  private long readRowValue(AccumuloClient client, String table, int row) throws Exception {
+    try (var scanner = client.createScanner(table)) {
+      scanner.setRange(new Range(row(row)));
+      var value = scanner.stream().map(Entry::getValue).map(Value::toString)
+          .collect(MoreCollectors.onlyElement());
+      return Long.parseLong(value);
+    }
+  }
+
+  private Map<String,Integer> countLoaded(AccumuloClient client, String table) throws Exception {
+    var ctx = ((ClientContext) client);
+    var tableId = ctx.getTableId(table);
+
+    try (var tabletsMetadata = ctx.getAmple().readTablets().forTable(tableId).build()) {
+      Map<String,Integer> counts = new HashMap<>();
+      for (var tabletMetadata : tabletsMetadata) {
+        String endRow =
+            tabletMetadata.getEndRow() == null ? "null" : tabletMetadata.getEndRow().toString();
+        counts.put(endRow, tabletMetadata.getLoaded().size());
+      }
+      return counts;
+    }
+  }
+
   private static void verifyData(AccumuloClient client, String table, int start, int end,
-      boolean setTime) throws Exception {
+      int valueOffset, boolean setTime) throws Exception {
     try (Scanner scanner = client.createScanner(table, Authorizations.EMPTY)) {
 
       Iterator<Entry<Key,Value>> iter = scanner.iterator();
@@ -784,7 +1377,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
           throw new Exception("unexpected row " + entry.getKey() + " " + i);
         }
 
-        if (Integer.parseInt(entry.getValue().toString()) != i) {
+        if (Integer.parseInt(entry.getValue().toString()) != valueOffset + i) {
           throw new Exception("unexpected value " + entry + " " + i);
         }
 
@@ -799,6 +1392,11 @@ public class BulkNewIT extends SharedMiniClusterBase {
     }
   }
 
+  private void verifyData(AccumuloClient client, String table, int start, int end, boolean setTime)
+      throws Exception {
+    verifyData(client, table, start, end, 0, setTime);
+  }
+
   public static void verifyMetadata(AccumuloClient client, String tableName,
       Map<String,Set<String>> expectedHashes) {
 
@@ -810,7 +1408,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       for (TabletMetadata tablet : tablets) {
         assertTrue(tablet.getLoaded().isEmpty());
 
-        Set<String> fileHashes = tablet.getFiles().stream().map(f -> hash(f.getMetaUpdateDelete()))
+        Set<String> fileHashes = tablet.getFiles().stream().map(f -> hash(f.getMetadataPath()))
             .collect(Collectors.toSet());
 
         String endRow = tablet.getEndRow() == null ? "null" : tablet.getEndRow().toString();
@@ -828,7 +1426,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       justification = "path provided by test; sha-1 is okay for test")
   public static String hash(String filename) {
     try {
-      byte[] data = Files.readAllBytes(Paths.get(filename.replaceFirst("^file:", "")));
+      byte[] data = Files.readAllBytes(java.nio.file.Path.of(filename.replaceFirst("^file:", "")));
       byte[] hash = MessageDigest.getInstance("SHA1").digest(data);
       return new BigInteger(1, hash).toString(16);
     } catch (IOException | NoSuchAlgorithmException e) {
@@ -841,18 +1439,24 @@ public class BulkNewIT extends SharedMiniClusterBase {
   }
 
   public static String writeData(FileSystem fs, String file, AccumuloConfiguration aconf, int s,
-      int e) throws Exception {
+      int e, int valueOffset) throws Exception {
     String filename = file + RFile.EXTENSION;
     try (FileSKVWriter writer = FileOperations.getInstance().newWriterBuilder()
-        .forFile(filename, fs, fs.getConf(), NoCryptoServiceFactory.NONE)
+        .forFile(UnreferencedTabletFile.of(fs, new Path(filename)), fs, fs.getConf(),
+            NoCryptoServiceFactory.NONE)
         .withTableConfiguration(aconf).build()) {
       writer.startDefaultLocalityGroup();
       for (int i = s; i <= e; i++) {
-        writer.append(new Key(new Text(row(i))), new Value(Integer.toString(i)));
+        writer.append(new Key(new Text(row(i))), new Value(Integer.toString(valueOffset + i)));
       }
     }
 
     return hash(filename);
+  }
+
+  private String writeData(FileSystem fs, String file, AccumuloConfiguration aconf, int s, int e)
+      throws Exception {
+    return writeData(fs, file, aconf, s, e, 0);
   }
 
   /**
@@ -898,12 +1502,13 @@ public class BulkNewIT extends SharedMiniClusterBase {
   static void setupBulkConstraint(String principal, AccumuloClient c)
       throws AccumuloException, AccumuloSecurityException, TableNotFoundException {
     // add a constraint to the metadata table that disallows bulk import files to be added
-    c.securityOperations().grantTablePermission(principal, MetadataTable.NAME,
+    c.securityOperations().grantTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.WRITE);
-    c.securityOperations().grantTablePermission(principal, MetadataTable.NAME,
+    c.securityOperations().grantTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.ALTER_TABLE);
 
-    c.tableOperations().addConstraint(MetadataTable.NAME, NoBulkConstratint.class.getName());
+    c.tableOperations().addConstraint(SystemTables.METADATA.tableName(),
+        NoBulkConstratint.class.getName());
 
     var metaConstraints = new MetadataConstraints();
     SystemEnvironment env = EasyMock.createMock(SystemEnvironment.class);
@@ -913,12 +1518,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
     // wait for the constraint to be active on the metadata table
     Wait.waitFor(() -> {
-      try (var bw = c.createBatchWriter(MetadataTable.NAME)) {
+      try (var bw = c.createBatchWriter(SystemTables.METADATA.tableName())) {
         Mutation m = new Mutation("~garbage");
         m.put("", "", NoBulkConstratint.CANARY_VALUE);
         // This test assume the metadata constraint check will not flag this mutation, the following
         // validates this assumption.
-        assertNull(metaConstraints.check(env, m));
+        assertTrue(metaConstraints.check(env, m).isEmpty());
         bw.addMutation(m);
         return false;
       } catch (MutationsRejectedException e) {
@@ -928,7 +1533,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
     });
 
     // delete the junk added to the metadata table
-    try (var bw = c.createBatchWriter(MetadataTable.NAME)) {
+    try (var bw = c.createBatchWriter(SystemTables.METADATA.tableName())) {
       Mutation m = new Mutation("~garbage");
       m.putDelete("", "");
       bw.addMutation(m);
@@ -937,12 +1542,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   static void removeBulkConstraint(String principal, AccumuloClient c)
       throws AccumuloException, TableNotFoundException, AccumuloSecurityException {
-    int constraintNum = c.tableOperations().listConstraints(MetadataTable.NAME)
+    int constraintNum = c.tableOperations().listConstraints(SystemTables.METADATA.tableName())
         .get(NoBulkConstratint.class.getName());
-    c.tableOperations().removeConstraint(MetadataTable.NAME, constraintNum);
-    c.securityOperations().revokeTablePermission(principal, MetadataTable.NAME,
+    c.tableOperations().removeConstraint(SystemTables.METADATA.tableName(), constraintNum);
+    c.securityOperations().revokeTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.WRITE);
-    c.securityOperations().revokeTablePermission(principal, MetadataTable.NAME,
+    c.securityOperations().revokeTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.ALTER_TABLE);
   }
 }
